--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
   <groupId>it.prova</groupId>
   <artifactId>myebay</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   
   
-  	<properties>
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 	</properties>
@@ -46,8 +47,8 @@
 			<version>3.11</version>
 		</dependency>
 	</dependencies>
-	
-		<build>
+  
+  <build>
 		<finalName>myebay</finalName>
 		<sourceDirectory>src/main/java</sourceDirectory>
 		<plugins>
